# bevy_fog_of_war

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_CN.md  index.html  test_rect.rs
.github/workflows/: ci.yaml  deploy-page.yaml  release.yaml
assets/shaders/: debug_red.wgsl  fog.wgsl  fog2d.wgsl  fog_2d.wgsl  fog_compute.wgsl  fog_of_war.wgsl  fog_only.wgsl  fog_overlay.wgsl  snapshot.wgsl  vision.wgsl  vision_compute.wgsl
examples/: 2d.rs  base.rs  dump.rs  playground.rs  simple_2d.rs
src/: chunk.rs  chunk_sync.rs  components.rs  data_transfer.rs  fog.rs  fog_2d.rs  gpu_sync_chunk.rs  lib.rs  managers.rs  persistence.rs  persistence_utils.rs  prelude.rs  render.rs  resources.rs  settings.rs  snapshot.rs  sync_texture.rs  systems.rs  texture_handles.rs  vision.rs  vision_compute.rs
src/fog_2d/: buffers.rs  chunk.rs  fog_of_war_2d.wgsl  mod.rs  node.rs  pipeline.rs
src/render/: compute.rs  extract.rs  mod.rs  overlay.rs  prepare.rs  snapshot.rs  snapshot_pass.rs  transfer.rs
src/render/shaders/: fog_compute.wgsl  fog_overlay.wgsl
tests/: ci_contract.rs
