[package]
name = "bevy_fog_of_war"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "A 2D fog of war plugin for Bevy"

[dependencies]
bevy_app = { version = "0.16" }
bevy_asset = { version = "0.16" }
bevy_color = { version = "0.16", features = [
    "serialize",
    "wgpu-types",
] }
bevy_derive = { version = "0.16" }
bevy_diagnostic = { version = "0.16" }
bevy_ecs = { version = "0.16" }
bevy_encase_derive = { version = "0.16" }
bevy_math = { version = "0.16" }
bevy_render = { version = "0.16" }
bevy_reflect = { version = "0.16" }
bevy_render_macros = { version = "0.16" }
bevy_time = { version = "0.16" }
bevy_transform = { version = "0.16" }
bevy_window = { version = "0.16" }
bevy_utils = { version = "0.16" }
bevy_tasks = { version = "0.16" }
bevy_image = { version = "0.16" }
bevy_mesh = { version = "0.16" }
bevy_log = { version = "0.16" }
bevy_core_pipeline = { version = "0.16.0" }
bevy_platform = { version = "0.16", default-features = false, features = [
    "std",
    "serialize",
] }

encase = { version = "0.10", features = ["glam"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
async-channel = "2.3.1"

[dev-dependencies]
bevy = { version = "0.16" }
bevy-inspector-egui = { version = "0.31" }


[[example]]
name = "playground"
