[package]
name = "bevy_fog_of_war"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "A 2D fog of war plugin for Bevy"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
] }

bytemuck = { version = "1.22.0", features = ["derive"] }
async-channel = "2.3.1"

[dev-dependencies]
bevy = { version = "0.16" }
#bevy-inspector-egui = { version = "0.31" }


[[example]]
name = "playground"
