[package]
name = "bevy_fog_of_war"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["ZoOL <zhooul@gmail.com>"]
description = "A 2D fog of war plugin for Bevy"
homepage = "https://crates.io/crates/bevy_fog_of_war"
documentation = "https://docs.rs/bevy_fog_of_war"
repository = "https://github.com/foxzool/bevy_fog_of_war"
keywords = ["bevy", "game", "plugin"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
] }

bytemuck = { version = "1.22.0", features = ["derive"] }
async-channel = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional compression dependencies
flate2 = { version = "1.0", optional = true }
lz4 = { version = "1.28", optional = true }
zstd = { version = "0.13", optional = true }

# Optional serialization format dependencies
rmp-serde = { version = "1.3", optional = true }
bincode = { version = "1.3", optional = true }

[features]
default = []
compression-gzip = ["flate2"]
compression-lz4 = ["lz4"]
compression-zstd = ["zstd"]
all-compression = ["compression-gzip", "compression-lz4", "compression-zstd"]
format-messagepack = ["rmp-serde"]
format-bincode = ["bincode"]
all-formats = ["format-messagepack", "format-bincode", "all-compression"]

[dev-dependencies]
bevy = { version = "0.16" }
#bevy-inspector-egui = { version = "0.31" }


[[example]]
name = "playground"

[[example]]
name = "simple_2d"
